DateBarWidget: fix assertion.

BUG: 426538